--- a/app/src/main/res/layout/activity_fight.xml
+++ b/app/src/main/res/layout/activity_fight.xml
@@ -15,34 +15,56 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/name2"
+        android:id="@+id/name1"
         android:fontFamily="casual"
-        android:textSize="14sp"
+        android:textSize="24sp"
         android:layout_toStartOf="@+id/img2" />
-
-    <com.android.volley.toolbox.NetworkImageView
-        android:layout_width="175dp"
-        android:layout_height="250dp"
-        android:id="@+id/img1"
-        android:layout_below="@+id/name1"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="15dp" />
-
-    <com.android.volley.toolbox.NetworkImageView
-        android:layout_width="175dp"
-        android:layout_height="250dp"
-        android:id="@+id/img2"
-        android:layout_alignTop="@+id/img1"
-        android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/img1"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/name1"
+        android:id="@+id/name2"
         android:fontFamily="casual"
-        android:textSize="14sp"
+        android:textSize="24sp"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/name2" />
+        android:layout_toEndOf="@+id/name1" />
+
+    <TextView
+        android:text="Puntos de vida: 100"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_below="@+id/img1"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="28dp"
+        android:textSize="18sp"
+        android:id="@+id/pv1"
+        android:layout_toStartOf="@+id/img2" />
+
+    <com.android.volley.toolbox.NetworkImageView
+        android:layout_width="140dp"
+        android:layout_height="250dp"
+        android:id="@+id/img1"
+        android:layout_marginTop="13dp"
+        android:layout_marginStart="24dp"
+        android:layout_below="@+id/name1"
+        android:layout_alignParentStart="true" />
+
+    <com.android.volley.toolbox.NetworkImageView
+        android:layout_width="140dp"
+        android:layout_height="250dp"
+        android:id="@+id/img2"
+        android:layout_marginStart="22dp"
+        android:layout_alignTop="@+id/img1"
+        android:layout_toEndOf="@+id/img1" />
+
+    <TextView
+        android:text="Puntos de vida: 100"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:id="@+id/pv2"
+        android:textSize="18sp"
+        android:layout_alignBaseline="@+id/pv1"
+        android:layout_alignBottom="@+id/pv1"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
