--- a/app/src/main/res/layout/activity_fight.xml
+++ b/app/src/main/res/layout/activity_fight.xml
@@ -17,28 +17,23 @@
         android:layout_height="50dp"
         android:id="@+id/name1"
         android:fontFamily="casual"
-        android:textSize="24sp"
-        android:layout_toStartOf="@+id/img2" />
+        android:textSize="22sp"
+        android:layout_toStartOf="@+id/img2"
+        android:textAllCaps="true"
+        android:textAlignment="center"
+        android:textStyle="normal|bold" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:id="@+id/name2"
         android:fontFamily="casual"
-        android:textSize="24sp"
+        android:textAllCaps="true"
+        android:textSize="22sp"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/name1" />
-
-    <TextView
-        android:text="Puntos de vida: 100"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_below="@+id/img1"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="28dp"
-        android:textSize="18sp"
-        android:id="@+id/pv1"
-        android:layout_toStartOf="@+id/img2" />
+        android:layout_toEndOf="@+id/name1"
+        android:textAlignment="center"
+        android:textStyle="normal|bold" />
 
     <com.android.volley.toolbox.NetworkImageView
         android:layout_width="140dp"
@@ -61,10 +56,20 @@
         android:text="Puntos de vida: 100"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
+        android:layout_marginTop="30dp"
+        android:textSize="18sp"
+        android:id="@+id/pv1"
+        android:layout_below="@+id/img1"
+        android:layout_alignEnd="@+id/img1" />
+
+    <TextView
+        android:text="Puntos de vida: 100"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
         android:id="@+id/pv2"
         android:textSize="18sp"
         android:layout_alignBaseline="@+id/pv1"
         android:layout_alignBottom="@+id/pv1"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignStart="@+id/img2" />
 
 </RelativeLayout>
