--- a/app/src/main/res/layout/activity_fight.xml
+++ b/app/src/main/res/layout/activity_fight.xml
@@ -15,17 +15,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/name1"
-        android:fontFamily="casual"
-        android:textSize="22sp"
-        android:layout_toStartOf="@+id/img2"
-        android:textAllCaps="true"
-        android:textAlignment="center"
-        android:textStyle="normal|bold" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
         android:id="@+id/name2"
         android:fontFamily="casual"
         android:textAllCaps="true"
@@ -44,14 +33,6 @@
         android:layout_below="@+id/name1"
         android:layout_alignParentStart="true" />
 
-    <com.android.volley.toolbox.NetworkImageView
-        android:layout_width="140dp"
-        android:layout_height="250dp"
-        android:id="@+id/img2"
-        android:layout_marginStart="22dp"
-        android:layout_alignTop="@+id/img1"
-        android:layout_toEndOf="@+id/img1" />
-
     <TextView
         android:text="Puntos de vida: 100"
         android:layout_width="wrap_content"
@@ -62,6 +43,14 @@
         android:layout_below="@+id/img1"
         android:layout_alignEnd="@+id/img1" />
 
+    <com.android.volley.toolbox.NetworkImageView
+        android:layout_width="140dp"
+        android:layout_height="250dp"
+        android:id="@+id/img2"
+        android:layout_alignTop="@+id/img1"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="17dp" />
+
     <TextView
         android:text="Puntos de vida: 100"
         android:layout_width="wrap_content"
@@ -70,6 +59,18 @@
         android:textSize="18sp"
         android:layout_alignBaseline="@+id/pv1"
         android:layout_alignBottom="@+id/pv1"
-        android:layout_alignStart="@+id/img2" />
+        android:layout_alignEnd="@+id/img2" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/name1"
+        android:fontFamily="casual"
+        android:textSize="22sp"
+        android:textAllCaps="true"
+        android:textAlignment="center"
+        android:textStyle="normal|bold"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/pv2" />
 
 </RelativeLayout>
