--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/gym"
     tools:context="van.pokeapigo.MainActivity">
 
     <Button
@@ -15,8 +16,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/start"
-        android:layout_marginTop="182dp"
+        android:layout_marginTop="101dp"
+        android:onClick="newGame"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:onClick="newGame" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
